--- a/Bonus2/Makefile.win
+++ b/Bonus2/Makefile.win
@@ -1,15 +1,15 @@
-# Project: Uppgift 1 
+# Project: Bonus 2
 # Makefile created by Dev-C++ 5.11
 
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = "Mil\ Bil\ 1.o"
-LINKOBJ  = "Mil Bil 1.o"
+OBJ      = "main\ bonus\ 2.o"
+LINKOBJ  = "main bonus 2.o"
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
-BIN      = "Uppgift 1 Bil Mil 1.exe"
+BIN      = "Bonus 2.exe"
 CXXFLAGS = $(CXXINCS) 
 CFLAGS   = $(INCS) 
 RM       = rm.exe -f
@@ -24,5 +24,5 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(CPP) $(LINKOBJ) -o $(BIN) $(LIBS)
 
-"Mil\ Bil\ 1.o": Mil\ Bil\ 1.cpp
-	$(CPP) -c "Mil Bil 1.cpp" -o "Mil Bil 1.o" $(CXXFLAGS)
+"main\ bonus\ 2.o": main\ bonus\ 2.cpp
+	$(CPP) -c "main bonus 2.cpp" -o "main bonus 2.o" $(CXXFLAGS)
