--- a/Uppgift47/Makefile.win
+++ b/Uppgift47/Makefile.win
@@ -1,15 +1,15 @@
-# Project: Bonus_16
+# Project: Uppgift_47
 # Makefile created by Dev-C++ 5.11
 
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = main_Bonus_16.o
-LINKOBJ  = main_Bonus_16.o
+OBJ      = main_Uppgift_47.o
+LINKOBJ  = main_Uppgift_47.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
-BIN      = Bonus_16.exe
+BIN      = Uppgift_47.exe
 CXXFLAGS = $(CXXINCS) 
 CFLAGS   = $(INCS) 
 RM       = rm.exe -f
@@ -24,5 +24,5 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(CPP) $(LINKOBJ) -o $(BIN) $(LIBS)
 
-main_Bonus_16.o: main_Bonus_16.cpp
-	$(CPP) -c main_Bonus_16.cpp -o main_Bonus_16.o $(CXXFLAGS)
+main_Uppgift_47.o: main_Uppgift_47.cpp
+	$(CPP) -c main_Uppgift_47.cpp -o main_Uppgift_47.o $(CXXFLAGS)
